--- a/SentinelOne/C9SP-SentinelOne-Install.ps1.org
+++ b/SentinelOne/C9SP-SentinelOne-Install.ps1.org
@@ -1,3 +1,20 @@
+<#
+.SYNOPSIS
+This is labeled "SentinelOne - Install Script" in Immy Global Scripts. I have created a copy here for reference.
+
+.DESCRIPTION
+Provides a more detailed explanation of what the script does, its functionality, and any important details.
+
+.PARAMETER <ParameterName>
+Describes each parameter the script accepts (if any).
+
+.EXAMPLE
+Shows example usage of the script.
+
+.NOTES
+Additional notes, author information, or revision history.
+
+#>
 
 Import-Module SentinelOne
 $SiteName = $TenantName
@@ -49,7 +66,7 @@ try
 }
 
 Write-Host "Using site $($Site.name) with registrationToken: $($site.registrationToken)"
-Write-Host ($Site | Format-List * | Out-String)
+Write-Host ($Site | fl * | Out-String)
 
 $LicenseValue = $site.registrationToken
 
@@ -65,7 +82,7 @@ if($GroupNameOverride)
     $Group | Should-HaveOne "Group with name $GroupNameOverride"
     if(!$Group.registrationToken){
         if($site.registrationToken){
-            throw "$($Site.name) has a registration token but $($Site.name)->$($Group.name) does not have a registration token. Are you sure this group is setup correctly in SentinelOne?`r`n$($Group | Format-List * | Out-String)"
+            throw "$($Site.name) has a registration token but $($Site.name)->$($Group.name) does not have a registration token. Are you sure this group is setup correctly in SentinelOne?`r`n$($Group | fl * | Out-String)"
         }
         throw "Neither site $($Site.name) nor group $($Group.name) have a registration token."
     }
@@ -265,5 +282,5 @@ Invoke-ImmyCommand -Timeout 900 {
 }
 Write-Host "Attempting to get AgentUUID from Registry"
 $JWT = Get-WindowsRegistryValue -Path "HKLM:\SOFTWARE\Sentinel Labs\State" -Name authCookie
-$AgentUuid = ConvertFrom-Base64Url ($JWT -split '\.')[0] | ConvertFrom-JSON | Select-Object -ExpandProperty u
+$AgentUuid = ConvertFrom-Base64Url ($JWT -split '\.')[0] | ConvertFrom-JSON | select -Expand u
 Write-Host "AgentUuid: $AgentUuid"
